# andy-jarombek-research

./: .gitignore  Makefile  README.md
.github/workflows/: ai-prompt.yml  assembly-x86.yaml  c.yml  cpp.yml  data-analytics.yml  databricks-terraform.yml  fortran.yml  go-binaries.yml  go-lint-format.yml  go-tests.yml  grpc.yml  javascript-e2e-test.yml  javascript-sse-e2e-test.yml  javascript-websockets-e2e-test.yml  linux-c-code.yml  llvm.yml  python-format-commit.yaml  python-formatting.yml  python-linting.yml  r.yml  react-graphql-js-format-commit.yaml  react-graphql-js-format-lint.yaml  react-webpack-seed-format-lint.yaml  react-webpack-seed-test.yaml  react_format_lint.yaml  react_test.yaml  vue.yml
ai/dall-e/: Makefile  README.md  pyproject.toml
ai/dall-e/aj_poll_logo/: main.py
ai/prompt/: Makefile  README.md  main.py  pyproject.toml
ai/prompt/ai_prompt_french/: main.py
ai/text-to-speech/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
ai/text-to-speech/app/: main.py  pyproject.toml
ai/tts-docker/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
ai/tts-docker/app/: main.py  pyproject.toml
assembly/: README.md
assembly/x86/: README.md
data-analytics/: .plzconfig
data-analytics/matplotlib/: matplotlib-first-steps.ipynb
data-analytics/numpy/: numba_basics.ipynb  numpy-first-steps.ipynb  numpy_next_steps.ipynb
data-analytics/pandas/: pandas-first-steps.ipynb  pandas-group-by.ipynb  pandas-next-steps.ipynb  pandas-time-series.ipynb
data-analytics/spark/data/: exercises.json
databricks/: README.md
databricks/infra/databricks/: providers.tf
databricks/infra/databricks/administration/: var.tf
databricks/infra/databricks/notebooks/: README.md
databricks/infra/databricks/notebooks/python/: README.md
databricks/infra/databricks/notebooks/scala/: README.md
fortran/: README.md
go/: README.md
go/advanced-concurrency/: BUILD  Dockerfile
go/goroutines/: basics_test.go  buffered_channels_test.go  cancel_goroutine_test.go  wait_group_test.go
go/goroutines/channel_example/: channel_example.go
go/sqlite-api/: README.md
grpc/: README.md  pyproject.toml  running_pb2.py  running_pb2_grpc.py
grpc/client/: Makefile  pyproject.toml
grpc/client/running_client/: main.py
grpc/server/: Makefile  pyproject.toml
grpc/server/running_server/: main.py
grpc/service/: Makefile  pyproject.toml  running.proto
grpc/service/grpc_running_service/: running_pb2_grpc.py
htmx/: Makefile  README.md  index.html  main.py  pyproject.toml
htmx/templates/: index.html  inventory.html  location.html
javascript/: README.md
jenkins/modules/kubernetes/: main.tf
linux/: README.md
llvm/: BUILD  README.md  run_arithmetic.sh
machine-learning/: README.md
machine-learning/programs/nyc-rats/: Pipfile
mojo/: README.md
mojo/numpy/: main.mojo
python/: README.md
python/coroutines/: Dockerfile  README.md  coroutines.py  pyproject.toml
python/dynamic_dispatch/: dynamic_dispatch.py  pyproject.toml
python/dynamic_dispatch/test/: test_dynamic_dispatch.py
python/http_requests/: README.md  main.py  read_file_range_header.py  read_file_stream.py  read_zipfile.py  utils.py
python/mojo/: README.md  Vagrantfile
python/sqlite-api/: Employee.py  README.md  main.py
r/: .plzconfig  BUILD
react/16-3-update/: .gitignore  Dockerfile  README.md
react/16-3-update/app/: .babelrc  package.json  webpack.config.js
react/16-3-update/app/src/: App.js  ContextDemo.js  FeaturePage.js  index.js
react/16-3-update/app/src/context/: ThemeWithContext.js  ThemeWithProps.js
react/16-3-update/app/test/: App.test.js  ContextDemo.snap.test.js  CreateRefDemo.snap.test.js  FeaturePage.snap.test.js  FeaturePage.test.js  ForwardRefDemo.snap.test.js  NewLifecycleDemo.snap.test.js  StrictModeDemo.snap.test.js
react/apollo/: README.md
react/graphql-js/: README.md  app.dockerfile
react/react-webpack-seed/: README.md
rust/ownership/: Cargo.toml
rust/ownership/src/: main.rs
vue/: README.md
vue/aj-poll/: .gitignore  Makefile  README.md  package-lock.json  package.json
vue/aj-poll/e2e/: vue.spec.ts
vue/aj-poll/src/: App.vue  main.ts
vue/aj-poll/src/assets/: base.css
vue/aj-poll/src/components/: AppHeader.vue  Header.vue  LanguagePoll.vue  Poll.vue  PollTable.vue
vue/aj-poll/src/components/__tests__/: AppHeader.spec.ts  Header.spec.ts
vue/aj-poll/src/router/: index.ts
vue/aj-poll/src/utils/: pollData.ts  types.ts
vue/aj-poll/src/views/: AboutView.vue  HomeView.vue  PollView.vue
vulkan/: README.md
vulkan/VulkanBasics/VulkanBasics/: main.cpp
vulkan/VulkanBasics/VulkanBasics.xcodeproj/: project.pbxproj
vulkan/VulkanBasics/VulkanBasics.xcodeproj/project.xcworkspace/xcuserdata/andrewjarombek.xcuserdatad/: UserInterfaceState.xcuserstate
vulkan/VulkanBasics/VulkanBasics.xcodeproj/xcuserdata/andrewjarombek.xcuserdatad/xcschemes/: xcschememanagement.plist
wasp/: README.md
wasp/AndyRunning/: main.wasp  package-lock.json  package.json
wasp/AndyRunning/src/: MainPage.jsx  PrPage.jsx  ResultsPage.jsx
