# Poetry configuration for a Python virtual environment.
# Author: Andrew Jarombek
# Date: 2/18/2024

[tool.poetry]
name = "aj-poll-logo"
version = "0.1.0"
description = "AJ Poll Website Logo using DALL-E"
authors = ["Andrew Jarombek <andrew@jarombek.com>"]

[tool.poetry.dependencies]
python = "^3.10"
openai = "1.12.0"
requests = "2.31.0"
python-dotenv = "1.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
ruff = "^0.1.7"
codespell = "^2.2.6"
tomli = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-main = "aj_poll_logo.main:main"

[tool.black]
skip-string-normalization = true
target-version = ["py311"]

[tool.ruff]
extend-exclude = [
    "docs/*",
    # External to the project's coding standards
    "tests/**/fixtures/*",
]
fix = true
line-length = 88
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
unfixable = [
    "ERA", # do not autoremove commented out code
]
extend-select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ERA", # flake8-eradicate/eradicate
    "I",   # isort
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "PGH", # pygrep
    "RUF", # ruff checks
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
]
ignore = [
    "B904", # use 'raise ... from err'
    "B905", # use explicit 'strict=' parameter with 'zip()'
    "N818", #  Exception name should be named with an Error suffix
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
force-single-line = false
lines-between-types = 1
lines-after-imports = 2
known-first-party = ["poetry"]
known-third-party = ["poetry.core"]

[tool.codespell]
skip = 'poetry.lock'
