# Poetry configuration for a Python virtual environment.
# Author: Andrew Jarombek
# Date: 1/5/2025

[tool.poetry]
name = "python-programming"
version = "0.1.0"
description = "Python Programming Repository"
authors = ["Andrew Jarombek <andrew@jarombek.com>"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
black = "24.10.0"
pylint = "3.3.3"
pytest = "8.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true
target-version = ["py312"]

[tool.pylint.main]
fail-under = 10.0
py-version = "3.12"

[tool.pylint."messages control"]
disable = ["logging-fstring-interpolation", "missing-function-docstring", "missing-module-docstring"]
good-names = ["i", "j", "f", "a", "b", "c", "x", "y"]